--- a/HTML Tutorial.html
+++ b/HTML Tutorial.html
@@ -19,11 +19,14 @@
     .picture{
         cursor: pointer;
     }
+    button{
+        cursor: pointer;
+    }
 </style>
 <body>
-    <h1 class="title">Hello!</h1>
+    <h1 id="title">Hello!</h1>
     <button>Click me!</button>
-    <h2>My Second Heading</h2>
+    <h2 id='other-title'>My Second Heading</h2>
     <p><b>My first paragraph.</b></p>
     <p><em>This paragraph is in italics.</em> Additionally, this line is not.</p>
     <span>Buonaaaaroooooooottttttt.</span>
@@ -40,8 +43,6 @@
       the web would prefer that a Web Developer have done a great job. Companies of course know this, so they hire web developers to ensure their sites provide 
       great experiences. So, lots of websites and lots of users means lots of demand. LOTS of demand. 🔥 </p>
 
-<script>
-    
-</script>
+<script src="HTML Tutorial.js"></script>
 </body>
 </html>
